--- a/src/templates/_post.html
+++ b/src/templates/_post.html
@@ -1,5 +1,5 @@
 {% if post.is_op %}
-<div id="{{post.post_num}}" class="post-container" style="background: lightsteelblue">
+<div id="{{post.post_num}}" class="post-container post-op">
 {% else %}
 <div id="{{post.post_num}}" class="post-container">
 {% endif %}
@@ -12,7 +12,7 @@
 			{% if post.subject %}
 				<span class="subject">{{post.subject}}</span>
 			{% endif %}
-			<span title="{{post.get_timedelta()}}">{{post.date}}</span>
+			<span title="{{post.get_timedelta()}}">{{post.date.strftime("%Y-%m-%d %H:%M:%S")}}</span>
 			<a href="{{url_for('thread', thread_num=post.thread.thread_num, _anchor=post.post_num)}}">#{{post.post_num}}</a>
 		</div>
 
@@ -59,6 +59,9 @@
 
 		<div class="post-message">
 			{{post.format_message()|safe}}
+			{% if post.ban_message %}
+				<p class="ban-msg">{{post.ban_message}}</p>
+			{% endif %}
 		</div>
 	</div>
 </div>	
