--- a/src/templates/_cat-thread.html
+++ b/src/templates/_cat-thread.html
@@ -3,7 +3,7 @@
 		<img src="{{url_for('static', filename='flags/' + post.flag)}}" title="{{post.get_flag_name()}}">
 		
 		{% if post.subject %}
-			<a class="subject" href="{{url_for('thread', thread_num=post.post_num)}}">{{post.subject}}</a>
+			<a class="subject" href="{{url_for('thread', thread_num=post.post_num)}}">{{post.subject|safe}}</a>
 		{% else %}
 			<a class="subject" href="{{url_for('thread', thread_num=post.post_num)}}">#{{post.post_num}}</a>
 		{% endif %}
