--- a/src/templates/report_form.html
+++ b/src/templates/report_form.html
@@ -1,24 +1,23 @@
+{% from '_post.html' import render_post %}
+{% from '_form-errors.html' import render_errors %}
+
 {% extends 'layout.html' %}
 {% block content %}
 
-<div style="display: flex; flex-direction: column;align-items: center;margin-top: 20px;">
+<div class="container">
 	
-	{% include '_post.html' %}
+	{{ render_post(post) }}
 
 	<form class="report-form" method="POST">
-		<p style="margin-bottom: 5px;">Report illegal content</p>
+		<p>Report illegal content</p>
 		{{form.csrf_token}}
 		{{form.post_num(value=post.post_num)}}
 		{{form.reason(placeholder="Reason for report")}}
-		{{form.submit}}
-
-		{% for error in form.submit.errors %}
-			{{error}}
-		{% endfor %}
-		{% for error in form.reason.errors %}
-			{{error}}
-		{% endfor %}
+		{{form.submit(class="submit-btn")}}
 	</form>
+
+	{{ render_errors(form.errors) }}
+
 </div>
 
 {% endblock %}
