--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,355 +1,370 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
-img {
-	vertical-align: top;
-	max-width: 100%;
-	max-height: 100%;
-	object-fit: contain;
-}
-
-a {
-	text-decoration: none;
-}
-
-li {
-	list-style-type: none;
-}
+html {
+  font-size: 62.5%; }
 
 body {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-	background: #eee;
-	font: 15px sans-serif;
-}
+  font-size: 1.6rem;
+  font-family: sans-serif;
+  font-weight: 400;
+  line-height: 1.15;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  word-break: break-word; }
 
-nav {
-	display: flex;
-	background: #333;
-	align-items: center;
-}
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 1.3rem; } }
 
-nav > span {
-	font-size: 28px;
-	font-weight: bold;
-	margin: 0px 10px;
-	color: white;
-	text-shadow: 2px 2px black;
-}
+img {
+  vertical-align: middle;
+  height: auto;
+  max-width: 100%; }
 
-nav > a {
-	padding: 15px 25px;
-	color: white;
-	text-decoration: none;
-	font-size: 17px;
-	text-shadow: 1px 2px black;
-	font-weight: bold;
-}
+li {
+  list-style: none; }
 
-nav > a:hover {
-	background: #444;
-}
+a {
+  text-decoration: none;
+  color: inherit; }
 
-.thread-container {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	padding: 8px;
-}
+.header {
+  display: flex;
+  align-items: center;
+  background-color: #333;
+  box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.25);
+  color: white;
+  text-align: center; }
+  .header__logo {
+    font-size: 2.8rem;
+    font-weight: 300;
+    letter-spacing: .25rem;
+    padding: 0 1.5rem; }
+  .header__nav {
+    font-size: 1.7rem;
+    display: flex;
+    align-self: stretch; }
+  .header__nav-item {
+    display: flex;
+    align-items: center;
+    padding: 1.5rem 2.5rem;
+    transition: all .2s; }
+    .header__nav-item:hover {
+      background-color: #444; }
 
-.post-container {
-	display: flex;
-	flex-direction: column;
-	margin: 4px;
-	border: 1px solid gray;
-	max-width: 97%;
-	background: lightgray
-}
+@media only screen and (max-width: 700px) {
+  .header {
+    display: block; }
+    .header__nav-item {
+      padding: 1rem 1.5rem;
+      flex: 1;
+      justify-content: center; } }
 
-.post-header {
-	display: flex;
-	padding: 2px;
-	justify-content: space-between;
-}
+.catalog {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-gap: 1rem;
+  max-width: 160rem;
+  padding: 0 1rem;
+  align-self: center; }
 
-.post-info {
-	display: flex;
-}
+@media only screen and (max-width: 1600px) {
+  .catalog {
+    max-width: none; } }
 
-.post-info > * {
-	margin-right: 5px;
-}
+@media only screen and (max-width: 720px) {
+  .catalog {
+    grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr)); } }
 
-.post-content {
-	display: flex;
-	word-break: break-word;
-}
-
-.post-images {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.post-images img {
-	max-width: 250px;
-	max-height: 250px;
-}
-
-.image-container {
-	display: flex;
-	flex-direction: column;
-	margin: 8px;
-}
-
-.image-info {
-	display: flex;
-	flex-direction: column;
-}
-
-.post-message {
-	padding: 10px;
-}
-
-.search-form {
-	display: flex;
-	flex-direction: column;
-	align-self: center;
-	background: lightgrey;
-	padding: 10px;
-	border: 1px solid gray;
-	margin: 15px;
-	min-width: 220px;
-}
-
-.search-form input, select {
-	margin-bottom: 5px;
-	padding: 1px;
-}
+.thread {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1.5rem 1rem; }
+  .thread__footer {
+    background-color: #333;
+    color: #eee;
+    margin-top: auto;
+    display: flex;
+    box-shadow: 0 -0.2rem 1rem rgba(0, 0, 0, 0.25); }
+  .thread__footer-link {
+    padding: .2rem .5rem; }
+    .thread__footer-link:hover {
+      color: white; }
 
 .search-results {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	padding: 8px;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1rem; }
 
-.cat-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-}
+.stats {
+  display: flex; }
+  .stats__flag-list {
+    background: lightgray;
+    border: 1px solid gray;
+    align-self: flex-start;
+    margin: 10px;
+    padding: 5px 12px;
+    flex-shrink: 0; }
+    .stats__flag-list > li {
+      padding: .3rem; }
+  .stats__most-posted {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start; }
+  .stats__most-posted-item {
+    background: lightgrey;
+    border: 1px solid grey;
+    margin: .5rem;
+    text-align: center; }
 
-.cat-thread {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 220px;
-	border: 1px solid gray;
-	margin: 4px;
-	height: 300px;
-	overflow: hidden;
-	background: lightgray;
-}
+.container {
+  max-width: 140rem;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  margin: 0 auto;
+  align-items: center; }
 
-.cat-thread:hover {
-	overflow-y: auto;
-}
+.catalog-thread {
+  height: 30rem;
+  background-color: lightgrey;
+  border: 1px solid grey;
+  overflow: hidden;
+  text-align: center;
+  transition: all .2s; }
+  .catalog-thread:hover {
+    overflow-y: auto; }
+  .catalog-thread__header {
+    padding: .3rem; }
+  .catalog-thread__image {
+    max-height: 20rem;
+    margin-bottom: .3rem; }
+  .catalog-thread__message {
+    padding: .5rem; }
 
-.cat-thread a img {
-	max-width: 100%;
-}
+.post {
+  background-color: lightgrey;
+  border: 1px solid grey;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: .8rem; }
+  .post--op {
+    background-color: lightsteelblue; }
+  .post:target {
+    border: 2px dashed black; }
+  .post a {
+    color: blue; }
+    .post a:visited {
+      color: purple; }
+  .post__header {
+    display: flex;
+    align-items: flex-start;
+    padding: .5rem .5rem 0 .5rem;
+    line-height: 2rem;
+    flex-wrap: wrap; }
+    .post__header > *:not(:first-child) {
+      margin-left: .5rem; }
+  .post__replies {
+    font-size: 1.1rem;
+    padding: .2rem .4rem 0 .4rem; }
+    .post__replies > a:not(:last-child) {
+      margin-right: .2rem; }
+    .post__replies > a:hover {
+      text-decoration: underline; }
+  .post__content {
+    display: flex;
+    flex-wrap: wrap; }
+  .post__images {
+    display: flex;
+    flex-wrap: wrap; }
+  .post__image-container {
+    margin: .6rem; }
+  .post__message {
+    padding: .9rem; }
 
-.cat-header {
-	padding: 2px;
-	display: flex;
-	word-break: break-word;
-	flex-shrink: 0;
-	align-items: center;
-}
+@media only screen and (max-width: 600px) {
+  .post__image-container img {
+    max-width: 12rem; } }
 
-.cat-header img {
-	padding: 3px;
-}
+.modal {
+  position: fixed;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center; }
+  .modal:target {
+    display: flex; }
+  .modal__background {
+    z-index: 1;
+    position: fixed;
+    width: 100%;
+    height: 100vh; }
+  .modal__content {
+    position: relative;
+    width: 60%;
+    height: 50rem;
+    background-color: #fff;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .modal__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: black;
+    padding: 1.5rem 2rem;
+    line-height: .6;
+    align-self: stretch; }
+  .modal__close {
+    font-size: 4rem; }
 
-.cat-message {
-	padding: 4px;
-	word-break: break-word;
-}
+.submit-btn {
+  align-self: center;
+  padding: .8rem 5.5rem !important;
+  background-color: #333;
+  color: white;
+  cursor: pointer;
+  transition: all .2s;
+  grid-column: 1 / 3;
+  justify-self: center; }
+  .submit-btn:hover {
+    background-color: #444; }
 
-.reply-link {
-	text-decoration: none;
-	color: red;
-}
+.info-form {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  color: black;
+  margin: 2rem; }
+  .info-form > *:not(:last-child) {
+    margin-bottom: 2rem; }
+  .info-form input {
+    height: 2.5rem; }
+  .info-form textarea {
+    resize: none;
+    height: 20rem;
+    font-size: 2.5rem; }
+
+.search-form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: .5rem;
+  margin: 1.5rem;
+  padding: 1rem;
+  background-color: lightgrey;
+  border: 1px solid grey;
+  align-self: center;
+  position: relative; }
+  .search-form input, .search-form select {
+    padding: .2rem; }
+  .search-form #subject {
+    grid-column: 1/2; }
+  .search-form #orig_name {
+    grid-column: 2/3;
+    grid-row: 2/3; }
+
+@media only screen and (max-width: 600px) {
+  .search-form {
+    display: flex;
+    flex-direction: column; }
+    .search-form input, .search-form select {
+      margin: .2rem; } }
 
 .report-form {
-	display: flex;
-	flex-direction: column;
-	min-width: 250px;
-	text-align: center;
-	background: lightgray;
-	padding: 8px;
-	border: 1px solid gray;
-	margin: 10px;
-}
+  background-color: lightgrey;
+  border: 1px solid grey;
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+  padding: .8rem;
+  text-align: center; }
+  .report-form > textarea {
+    min-width: 25rem;
+    min-height: 12rem;
+    margin: .5rem;
+    padding: .5rem; }
 
-.report-form textarea {
-	min-height: 120px;
-	min-width: 248px;
-	margin-bottom: 5px;
-	padding: 2px;
-}
+.paginator {
+  display: flex;
+  margin: 1.5rem 0;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; }
+  .paginator__item {
+    background: lightgrey;
+    border: 1px solid grey;
+    padding: .5rem 1rem;
+    margin: .4rem;
+    font-size: 2rem; }
+    .paginator__item:hover {
+      background-color: lightsteelblue; }
+    .paginator__item--selected {
+      background-color: lightsteelblue; }
 
-.report {
-	display: flex;
-}
-
-.report > * {
-	margin-right: 5px;
-}
-
-.page-nav {
-	display: flex;
-	flex-wrap: wrap;
-	align-self: center;
-	margin: 20px;
-	font: 25px sans-serif;
-}
-
-.page-nav > * {
-	border: 1px solid gray;
-	background: lightgray;
-	padding: 4px 6px;
-	color: black;
-	margin: 3px 5px;
-}
-
-.page-nav > a:hover {
-	background: lightsteelblue;
-}
-
-.thread-footer {
-	display: flex;
-	margin: 10px;
-}
-
-.thread-footer a {
-	margin: 5px 8px;
-}
-
-.subject {
-	color: #c33;
-	font-weight: bold;
-}
+.form-errors {
+  background-color: lightgrey;
+  border: 1px solid grey;
+  padding: 1rem;
+  align-self: center; }
 
 .flashed-message {
-	background: lightgray;
-	border: 1px solid gray;
-	margin: 10px;
-	padding: 15px 25px;
-	align-self: center;
-}
+  background: lightgray;
+  border: 1px solid gray;
+  margin: 1rem;
+  padding: 1.5rem 2.5rem;
+  align-self: center; }
 
-.flags-list {
-	background: lightgray;
-	border: 1px solid gray;
-	align-self: flex-start;
-	margin: 10px;
-	padding: 5px 12px;
-	flex-shrink: 0;
-}
-
-.flags-list li {
-	padding: 3px;
-}
-
-.most-posted {
-	display: flex;
-	flex-wrap: wrap;
-	align-self: flex-start;
-	justify-content: center;
-	align-items: center;
-}
-
-.most-posted > div {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background: lightgray;
-	margin: 5px;
-	border: 1px solid gray;
-}
-
-.site-info {
-	display: flex;
-	flex-direction: column;
-	background: lightgray;
-	border: 1px solid gray;
-	max-width: 700px;
-	align-self: center;
-	margin: 25px;
-	line-height: 25px;
-}
-
-.site-info > div {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin: 20px;
-}
-
-.site-info h2 {
-	margin: 5px;
-}
+.subject {
+  color: #c33;
+  font-weight: 700; }
 
 .greentext {
-	color: #077;
-}
+  color: #077; }
 
 .orangetext {
-	color: #e04000;
-}
+  color: #e04000; }
 
 .redtext {
-	color: #af0a0f;
-	font-weight: bold;
-	font-size: 125%;
-}
+  color: #af0a0f;
+  font-weight: 700;
+  font-size: 125%; }
 
-.post-op, .current-page {
-	background: lightsteelblue;
-}
-
-.post-container:target {
-	background: lightsteelblue;
-}
+.reply-link {
+  color: red; }
 
 .mod-label {
-	color: red;
-	font-weight: bold;
-}
-
-.mod-label::before {
-	content: "## ";
-}
-
-.mod-label::after {
-	content: " ##";
-}
+  color: red;
+  font-weight: 700; }
+  .mod-label::before {
+    content: "## "; }
+  .mod-label::after {
+    content: " ##"; }
 
 .spoiler {
-	background: black;
-}
+  color: black !important;
+  background: black; }
+  .spoiler:hover {
+    background-color: inherit; }
 
-.spoiler:hover {
-	background: inherit;
-}
+.ban-message {
+  color: red;
+  margin-top: 10px;
+  font-weight: 700; }
 
-.ban-msg {
-	color: red;
-	margin-top: 10px;
-	font-weight: bold;
-}
+.page-title {
+  font-size: 2.5rem;
+  font-weight: 300;
+  letter-spacing: .3rem;
+  text-align: center;
+  margin: 1rem; }
