--- a/src/static/sass/_layout.scss
+++ b/src/static/sass/_layout.scss
@@ -33,7 +33,7 @@
 	}
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 720px) {
 	.header {
 		display: block;
 
@@ -51,20 +51,15 @@
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 	grid-gap: 1rem;
-	max-width: 160rem;
+	max-width: 85%;
 	padding: 0 1rem;
 	align-self: center;
-}
-
-@media only screen and (max-width: 1600px) {
-	.catalog {
-		max-width: none;
-	}
 }
 
 @media only screen and (max-width: 720px) {
 	.catalog {
 		grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+		max-width: none;
 	}
 }
 
