--- a/src/templates/thread.html
+++ b/src/templates/thread.html
@@ -16,4 +16,6 @@
 		<a class="thread__footer-link" href="{{url_for('catalog')}}">Return</a>
 	</footer>
 
+	<script type="text/javascript" src="{{url_for('static', filename='js/replyPreview.js')}}"></script>
+
 {% endblock %}
