--- a/src/templates/_catalog-thread.html
+++ b/src/templates/_catalog-thread.html
@@ -1,6 +1,8 @@
 <div class="catalog-thread">
 	<div class="catalog-thread__header">
-		<img class="catalog-thread__header-flag" src="{{url_for('static', filename='flags/' + post.flag)}}" title="{{post.get_flag_name()}}">
+		{% if post.flag %}
+			<img class="catalog-thread__header-flag" src="{{url_for('static', filename='flags/' + post.flag)}}" title="{{post.get_flag_name()}}">
+		{% endif %}
 		{% if post.subject %}
 			<a class="subject" href="{{url_for('thread', thread_num=post.post_num)}}">{{post.subject|safe}}</a>
 		{% else %}
