Updated about page

--- a/src/static/sass/_layout.scss
+++ b/src/static/sass/_layout.scss
@@ -38,7 +38,7 @@
 		display: block;
 
 		&__nav-item {
-			padding: 1rem 1.5rem;
+			padding: 1.5rem 0;
 			flex: 1;
 			justify-content: center;
 		}
@@ -131,8 +131,6 @@
 	}
 }
 
-
-
 ///////////////////////////////////////////////////////////
 // Container
 .container {
@@ -142,4 +140,42 @@
 	padding: 1rem;
 	margin: 0 auto;
 	align-items: center;
+}
+
+///////////////////////////////////////////////////////////
+// Site Info
+.site-info {
+	border: 1px solid grey;
+	margin: 20px 5px;
+	background-color: lightgrey;
+	max-width: 850px;
+	min-height: 200px;
+	align-self: center;
+
+	& a {
+		color: blue;
+		&:visited {
+			color: purple;
+		}
+	}
+
+	&__header {
+		padding: 5px 10px;
+		background-color: #333;
+		color: white;
+		font-size: 25px;
+		font-weight: 300;
+		letter-spacing: 3px;
+	}
+}
+
+.info-post {
+	padding: 10px 15px;
+	line-height: 30px;
+	margin-bottom: 10px;
+
+	&__header {
+		text-align: center;
+		margin-bottom: 5px;
+	}
 }
