Added markdown column to Post model

--- a/src/templates/_catalog-thread.html
+++ b/src/templates/_catalog-thread.html
@@ -19,6 +19,6 @@
 	<p>{{post.thread.total_posts}} Post(s)</p>
 
 	<div class="catalog-thread__message">
-		{{post.format_message()|safe}}
+		{{post.markdown|safe}}
 	</div>
 </div>
