--- a/src/templates/report_form.html
+++ b/src/templates/report_form.html
@@ -13,7 +13,7 @@
 		{{form.csrf_token}}
 		{{form.post_num(value=post.post_num)}}
 		{{form.reason(placeholder="Reason for report")}}
-		{{form.submit(class="submit-btn")}}
+		{{form.submit(class="btn-submit")}}
 	</form>
 
 	{{ render_errors(form.errors) }}
