Fixed reply preview positioning at edges of screen

--- a/src/static/sass/_base.scss
+++ b/src/static/sass/_base.scss
@@ -17,6 +17,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	word-break: break-word;
+	position: relative;
 }
 
 @media only screen and (max-width: 600px) {
