--- a/src/static/style.css
+++ b/src/static/style.css
@@ -14,7 +14,8 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  word-break: break-word; }
+  word-break: break-word;
+  position: relative; }
 
 @media only screen and (max-width: 600px) {
   body {
