--- a/src/templates/_catalog-thread.html
+++ b/src/templates/_catalog-thread.html
@@ -1,7 +1,7 @@
 <div class="catalog-thread">
 	<div class="catalog-thread__header">
 		{% if post.flag %}
-			<img class="catalog-thread__header-flag" src="{{url_for('static', filename='flags/' + post.flag)}}" title="{{post.get_flag_name()}}">
+			<img class="catalog-thread__header-flag" src="{{url_for('static', filename='flags/' + post.flag)}}" title="{{post.flag_name}}">
 		{% endif %}
 		{% if post.subject %}
 			<a class="subject" href="{{url_for('thread', thread_num=post.post_num)}}">{{post.subject|safe}}</a>
@@ -16,7 +16,7 @@
 		{% endif %}
 	</a>
 
-	<p>{{post.thread.total_posts}} Post(s)</p>
+	<p>{{post.thread.post_count}}</p>
 
 	<div class="catalog-thread__message">
 		{{post.markdown|safe}}
