--- a/src/static/sass/_base.scss
+++ b/src/static/sass/_base.scss
@@ -17,6 +17,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	word-break: break-word;
+	background-color: var(--color-background);
+	color: var(--color-text);
 	position: relative;
 }
 
