--- a/src/static/sass/_layout.scss
+++ b/src/static/sass/_layout.scss
@@ -3,7 +3,7 @@
 .header {
 	display: flex;
 	align-items: center;
-	background-color: #333;
+	background-color: var(--color-header);
 	box-shadow: 0 .2rem 1rem rgba(0,0,0,.25);
 	color: white;
 	text-align: center;
@@ -80,7 +80,7 @@
 	padding: 1.5rem 1rem;
 
 	&__footer {
-		background-color: #333;
+		background-color: var(--color-header);
 		color: #eee;
 		margin-top: auto;
 		display: flex;
@@ -114,8 +114,8 @@
 }
 
 .flag-list {
-	background: lightgray;
-	border: 1px solid gray;
+	background-color: var(--color-primary);
+	border: 1px solid var(--color-border);
 	margin: 10px;
 	padding: 5px 12px;
 
@@ -132,8 +132,8 @@
 	align-content: flex-start;
 
 	&__item {
-		background: lightgrey;
-		border: 1px solid grey;
+		background-color: var(--color-primary);
+		border: 1px solid var(--color-border);
 		margin: .5rem;
 		text-align: center;
 	}
@@ -153,8 +153,8 @@
 ///////////////////////////////////////////////////////////
 // Site Info
 .site-info {
-	border: 1px solid grey;
-	background-color: lightgrey;
+	background-color: var(--color-primary);
+	border: 1px solid var(--color-border);
 	margin: 20px;
 	max-width: 850px;
 	min-height: 200px;
@@ -169,7 +169,7 @@
 
 	&__header {
 		padding: 5px 10px;
-		background-color: #333;
+		background-color: var(--color-header);
 		color: white;
 		font-size: 25px;
 		font-weight: 300;
