--- a/src/static/sass/main.scss
+++ b/src/static/sass/main.scss
@@ -1,4 +1,5 @@
-@import "base.scss";
-@import "layout.scss";
-@import "components.scss";
-@import "typography.scss";
+@import "variables";
+@import "base";
+@import "layout";
+@import "components";
+@import "typography";
